--- a/css/common.css
+++ b/css/common.css
@@ -6,5 +6,19 @@
 .title-wrapper{width:100%; height:auto; display:flex; flex-direction: column; align-items: center; justify-content: center;}
 .title-wrapper .title-desc{font-family:var(--ff-kr-serif); color:var(--color-pt); font-size:1.25rem; line-height: var(--el-medium); letter-spacing: 1px;}
 .title-wrapper .section-title{font-size:3.125rem; letter-spacing: .2rem; font-weight:500; font-family:var(--ff-en); position:relative; padding:0 5rem;}
-.title-wrapper .section-title:before{content:''; width:10rem; height:1px; background:var(--color-fs); position:absolute; right:100%; top:50%; transform:translateY(-50%);}
-.title-wrapper .section-title:after{content:''; width:10rem; height:1px; background:var(--color-fs); position:absolute; left:100%; top:50%; transform:translateY(-50%);}
+.title-wrapper .section-title:before{content:''; width:0; height:1px; background:var(--color-fs); position:absolute; right:100%; top:50%; transform:translateY(-50%);}
+.title-wrapper .section-title:after{content:''; width:0; height:1px; background:var(--color-fs); position:absolute; left:100%; top:50%; transform:translateY(-50%);}
+
+.section.aos-animate .title-wrapper .section-title:before,
+.section.aos-animate .title-wrapper .section-title:after{animation:title-line 1.2s 1; animation-delay: .5s; animation-fill-mode: forwards; _-webkit-animation:title-line 1.2s 1; _-ms-animation:title-line 1.2s 1; _-moz-animation:title-line 1.2s 1; _-o-animation:title-line 1.2s 1;}
+
+/* Common Button Style */
+.more-btn a{display: flex; color: #333; font-weight: 500; text-align: center; position: relative; justify-content: center; align-items: center; text-transform: uppercase; font-size: .75rem; width: 160px; height: 45px;}
+
+.more-btn a svg{position: absolute; top: 0; left: 0;}
+.more-btn a svg rect{fill: transparent; stroke: var(--color-pt); stroke-width: 2px; stroke-dasharray: 338% 37; stroke-dashoffset: 240%; transition: all 1.5s;} 
+/* stroke-dasharray : first - 선길이, second - 끊어진 길이
+   stroke-dashoffset : 전체 stroke line move 0,0에서 시작*/
+.more-btn a:hover svg rect{stroke-dashoffset: -100%;}
+
+
