--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,10 @@
 .title-wrapper .section-title:after{content:''; width:0; height:1px; background:var(--color-fs); position:absolute; left:100%; top:50%; transform:translateY(-50%);}
 
 .section.aos-animate .title-wrapper .section-title:before,
-.section.aos-animate .title-wrapper .section-title:after{animation:title-line 1.2s 1; animation-delay: .5s; animation-fill-mode: forwards; _-webkit-animation:title-line 1.2s 1; _-ms-animation:title-line 1.2s 1; _-moz-animation:title-line 1.2s 1; _-o-animation:title-line 1.2s 1;}
+.section.aos-animate .title-wrapper .section-title:after{animation:title-line 1.2s 1; animation-delay: .5s; animation-fill-mode: forwards;}
+/*
+ -webkit-animation:title-line 1.2s 1; -ms-animation:title-line 1.2s 1; -moz-animation:title-line 1.2s 1; -o-animation:title-line 1.2s 1;
+ */
 
 /* Common Button Style */
 .more-btn a{display: flex; color: #333; font-weight: 500; text-align: center; position: relative; justify-content: center; align-items: center; text-transform: uppercase; font-size: .75rem; width: 160px; height: 45px;}
